# Proyecto-de-software

./: .gitignore  README.md  main.py
admin/: .flaskenv  .gitignore  README.md  app.py  cookies.txt  production_seeds.sql  pyproject.toml  setup.sh  sitios.csv
admin/docs/: GOOGLE_OAUTH_SETUP.md  IMAGE_VALIDATIONS.md
admin/migrations/: add_profile_picture.sql
admin/src/core/: database.py
admin/src/core/featureFlags/: __init__.py  flag.py
admin/src/core/historicalSites/: __init__.py  enums.py  site.py  site_history.py  tag.py
admin/src/core/historicalSites/tags/: __init__.py  tag.py
admin/src/core/images/: __init__.py  images.py
admin/src/core/models/: __init__.py  site.py
admin/src/core/permissions/: __init__.py  permission.py
admin/src/core/reseñas/: __init__.py  estadoReseña.py  reseña.py
admin/src/core/users/: __init__.py  permissions.py  role.py  user.py
admin/src/web/: __init__.py  auth.py  config.py  seeds.py  storage.py
admin/src/web/api/: README.md  __init__.py  auth.py  authenticate.py  exceptions.py  maintenance.py  reviews.py  sites.py  validators.py
admin/src/web/auditoria/: site_events.py
admin/src/web/controllers/: dummy.py  feature_flags.py  maintenance.py  reseñas.py  reseñas_controller.py  sites.py  tags_controller.py  users.py
admin/src/web/handlers/: error.py
admin/src/web/helpers/: __init__.py
admin/src/web/helpers/validations/: auth.py  (+3 more)
admin/src/web/templates/: error.html  home.html  layout.html
admin/src/web/validators/: users.py
admin/static/: maintenance.css  style.css
admin/tests/: test_image_validations.py
(+91 files in other folders)
